# chrome-cdp-reader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PR9_DESCRIPTION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BASELINE.md  HANDOVER.md  PROJECT_CONTEXT.md  REVIEW_CONTEXT_phase1.md  TROUBLESHOOTING.md
scripts/: ROOT_CAUSE_AND_SETUP.md  check_chrome_debug_wsl.sh  copy-cookies.bat  launch_debug_chrome.ps1  setup-chrome.bat  setup_wsl_portproxy.ps1
src/chrome_cdp_reader/: __init__.py  bridge.py  chrome_launcher.py  cli.py  cookie_manager.py  deadlines.py  errors.py  models.py  url_validation.py
src/chrome_cdp_reader/readers/: __init__.py  facebook.py  generic.py  gmail.py  zalo.py
src/chrome_cdp_reader/utils/: __init__.py
tests/: test_basic.py  test_bridge_integration.py  test_cdp.py  test_cli_exit_codes.py  test_deadlines.py  test_errors.py  test_fixes_b1b2b3.py  test_integration.py  test_load_lifecycle.py  test_models.py  test_round3.py  test_tab_lifecycle.py  test_tab_reuse_live.py  test_url_validation.py
